# SF_test

./: .gitignore  CMakeLists.txt  Untitled-1.md  _build.bat  client.cpp  main.cpp  my_algorithm.hpp  server.cpp  snake.hpp
game/snake_game/: client.hpp  food.hpp  game.hpp  server.hpp  shared.hpp  snake.hpp
my_algorithm/: my_algorithm.hpp
